# PropGen

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docs/: API_KEYS.md  ARCHITECTURE.md  CROSS_ENGINE.md  GETTING_STARTED.md  MCP_SETUP.md
src/propgen/: __init__.py  _time.py  cli.py  cross_engine.py  llm_text.py  mcp.py  models.py  service.py
src/propgen/ai/: __init__.py  classifier.py  drafter.py  pricer.py
src/propgen/config/: __init__.py  loader.py
src/propgen/crm/: __init__.py  database.py
src/propgen/followup/: __init__.py  scheduler.py
src/propgen/mcp_server/: __init__.py  server.py
src/propgen/pdf/: __init__.py  renderer.py
src/propgen/pricing/: __init__.py  catalog.py
src/propgen/sources/: __init__.py  base.py  docusign.py  docusign_webhooks.py  dropbox_sign.py  email_parser.py  pandadoc.py  webhook.py
tests/: conftest.py  test_config_loader.py  test_cover_email_from.py  test_docusign_identity.py  test_pdf_identity.py  test_signature.py
