[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propgen"
version = "0.1.0"
description = "AI-powered proposal, quote, and estimate generation engine — PDF, e-sign, human approval"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "PropGen contributors" }]

dependencies = [
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    "aiosqlite>=0.20.0",
    "aiosmtplib>=3.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dateutil>=2.9.0",
    "reportlab>=4.2.0",
    "svglib>=1.5.0",
    "markdown-it-py>=3.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
propgen = "propgen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/propgen"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
